--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -132,6 +132,7 @@
                 android:textSize="18sp" />
 
             <TextView
+                android:id="@+id/totalSubscriptionCount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="2개"
