--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,6 @@
 <resources>
+    <style name="AppTheme">AppTheme</style>
+
     <style name="CalendarDateText">
         <item name="android:textSize">14sp</item>
         <item name="android:textColor">#000000</item>
@@ -9,10 +11,29 @@
         <item name="android:textColor">#000000</item>
     </style>
 
-    <style name="AppTheme">AppTheme</style>
+    <style name="CalendarWhiteText" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">#FFFFFF</item>
+    </style>
+
+    <style name="WhiteText" parent="TextAppearance.AppCompat.Medium">
+        <item name="android:textColor">#FFFFFF</item>
+    </style>
+
+    <!-- 이전/다음 달 날짜 회색 -->
+    <style name="GrayText" parent="TextAppearance.AppCompat.Medium">
+        <item name="android:textColor">#888888</item>
+    </style>
+
+    <!-- 요일 텍스트 -->
+    <style name="WeekDayText" parent="TextAppearance.AppCompat.Medium">
+        <item name="android:textColor">#FFFFFF</item> <!-- 평일 기본 흰색 -->
+    </style>
 
     <style name="CustomDialog" parent="Theme.AppCompat.Light.Dialog">
         <item name="android:windowBackground">@android:color/transparent</item> <!-- 투명 배경 -->
         <item name="android:backgroundDimEnabled">true</item> <!-- 배경 흐림 효과 -->
     </style>
+
+
+
 </resources>
