--- a/app/src/main/res/drawable/date_background.xml
+++ b/app/src/main/res/drawable/date_background.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#388E3C"/> <!-- 진한 초록 -->
-    <corners android:radius="12dp"/>
+    <solid android:color="#E5E7EB" />
+    <corners android:radius="12dp" />
 </shape>
