--- a/app/src/main/res/layout/activity_connected.xml
+++ b/app/src/main/res/layout/activity_connected.xml
@@ -1,54 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#2C3036"
-    android:orientation="vertical"
-    android:gravity="center"
+    android:background="#F5F7FA"
     android:padding="32dp">
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/partyAnimation"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         app:lottie_autoPlay="true"
-        app:lottie_loop="false"
+        app:lottie_loop="true"
         app:lottie_rawRes="@raw/fireworks"
-        android:layout_marginBottom="36dp" />
+        app:layout_constraintBottom_toTopOf="@id/titleText"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="packed"/>
 
     <TextView
         android:id="@+id/titleText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="연동이 완료되었어요"
-        android:textColor="#FFFFFF"
-        android:textSize="22sp"
+        android:text="연동이 완료되었어요!"
+        android:textColor="#1D2430"
+        android:textSize="24sp"
         android:textStyle="bold"
-        android:gravity="center"
-        android:layout_marginBottom="12dp" />
+        android:layout_marginTop="24dp"
+        app:layout_constraintTop_toBottomOf="@id/partyAnimation"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <TextView
         android:id="@+id/subText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="이제 자동으로 구독 정보를 가져옵니다"
-        android:textColor="#B0B0B0"
+        android:textColor="#8A94A4"
         android:textSize="16sp"
-        android:gravity="center"
-        android:layout_marginBottom="36dp" />
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@id/titleText"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/confirmButton"
-        android:layout_width="220dp"
-        android:layout_height="52dp"
+        android:layout_width="0dp"
+        android:layout_height="56dp"
         android:text="확인"
-        android:textColor="#FFFFFF"
-        android:backgroundTint="#232621"
+        android:textColor="@android:color/white"
         android:textSize="18sp"
         android:textStyle="bold"
-        android:layout_marginTop="12dp"
-        android:elevation="6dp"
-        android:background="@drawable/rounded_button" />
+        android:background="@drawable/button_background_gradient"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="24dp"/>
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
