--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -34,6 +34,22 @@
         <item name="android:backgroundDimEnabled">true</item> <!-- 배경 흐림 효과 -->
     </style>
 
+    <style name="CalendarHeader" parent="TextAppearance.AppCompat.Medium">
+        <item name="android:textColor">#1D2430</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="CalendarWeekDay" parent="TextAppearance.AppCompat.Small">
+        <item name="android:textColor">#8A94A4</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="CalendarDate" parent="TextAppearance.AppCompat.Medium">
+        <item name="android:textColor">#1D2430</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
 
 
 </resources>
