--- a/app/src/main/res/layout/dialog_low_usage.xml
+++ b/app/src/main/res/layout/dialog_low_usage.xml
@@ -22,13 +22,14 @@
             android:layout_marginBottom="16dp">
 
             <ImageView
+                android:id="@+id/dialog_app_icon"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:src="@drawable/ic_youtube_music"
                 android:layout_marginEnd="12dp"/>
 
             <TextView
-                android:layout_width="wrap_content"
+                android:id="@+id/dialog_app_name"  android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Youtube"
                 android:textColor="#1D2430"
